# tb2d

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
Box2dLes/: b2entity.cpp  b2entity.h  circle.cpp  circle.h  contactListener.cpp  main.cpp
EpicFighter/: ground.cpp  ground.h  main.cpp  player.cpp  player.h
StaffOfTheChaosTemple/: b2entity.cpp  b2entity.h  contactListener.cpp  contactListener.h  crystal.cpp  crystal.h  door.cpp  door.h  enemy.cpp  enemy.h  laser.cpp  laser.cpp~RF1da01861.TMP  laser.h  level.cpp  level.h  level1.cpp  level1.h  level2.cpp  level2.h  leveleditor.cpp  leveleditor.h  levelselector.cpp  levelselector.h  linkable.cpp  linkable.h  loadlevel.cpp  loadlevel.h  main.cpp  menu.cpp  menu.h  mirror.cpp  mirror.h  person.cpp  person.h  player.cpp  player.h  raycastCallBack.cpp  raycastCallBack.h  rotator.cpp  rotator.h  (+2 more)
StaffOfTheChaosTemple/levels/: finish.LEVEL  level1.LEVEL  level2.LEVEL  level3.LEVEL  level5.LEVEL  mirrorlevel.LEVEL  run.LEVEL  tutorial.LEVEL
StaffOfTheChaosTemple/shaders/: crystal.fs  laserParticle.fs
TheRestlessTombs/: armoredOrc.cpp  armoredOrc.h  b2entity.cpp  b2entity.h  babyOrc.cpp  babyOrc.h  bomb.cpp  bomb.h  bomberOrc.cpp  bomberOrc.h  boss.cpp  boss.h  bossOrc.cpp  bossOrc.h  contactListener.cpp  contactListener.h  crate.cpp  crate.h  damagePotion.cpp  damagePotion.h  destructable.cpp  destructable.h  door.cpp  door.h  enemy.cpp  enemy.h  floor.cpp  floor.h  gold.cpp  gold.h  hand.cpp  hand.h  healthPotion.cpp  healthPotion.h  item.cpp  item.h  level1.cpp  level1.h  lootChest.cpp  lootChest.h  (+34 more)
TheRestlessTombs/shaders/: bomb.fs  healthbar.vs  person.fs
buildWindows/: CMakeCache.txt
doc/: TechnicalDesign_tb2d.graphml  TechnicalDesign_tb2d_v1.1.graphml  TechnicalDesign_tb2d_v1.2.graphml  documentation.html
start/: game.cpp  game.h  main.cpp  player.cpp  player.h
tb2d/: OBJloader.cpp  OBJloader.h  b2entity.cpp  b2entity.h  box.cpp  box.h  button.cpp  button.h  camera.cpp  camera.h  circle.cpp  circle.h  configure.cpp  configure.h  contactListener.cpp  contactListener.h  core.cpp  core.h  debugRenderer.cpp  debugRenderer.h  entity.cpp  entity.h  hud.cpp  hud.h  input.cpp  input.h  mesh.cpp  mesh.h  particlerenderer.cpp  particlerenderer.h  raycast.cpp  raycast.h  renderManager.cpp  renderManager.h  renderer.cpp  renderer.h  resourceManager.cpp  resourceManager.h  scene.cpp  scene.h  (+24 more)
tb2d/box2Dclasses/: b2entity.cpp  b2entity.h  raycast.cpp  raycast.h
tb2d/shaders/: basic.fs  basic.vs  color.fs  color.vs  colorHUD.vs  colorWithTextureInstancing.vs  debugLineRenderer.fs  debugLineRenderer.vs  debugRenderer.fs  debugRenderer.vs  defaultFreetype.fs  defaultFreetype.vs  defaultFreetypeHUD.vs  defaultHUD.vs  defaultShader.fs  defaultShader.vs  defaultShaderInstancing.vs  directionalLight.fs  directionalLightOnMaterial.fs  directionalLightWithNormalMap.fs  freetype.fs  freetype.vs  hud.vs  lampShader.fs  lightingShader.fs  pointLight.fs  shader.fs  shader.vs  shader2.fs  spotLight.fs  text.vs  textHUD.fs  textHUD.vs  vertex.vs  vertexWithNormalMap.vs
tb2d/textures/: T_N-Bastet_DIF.tga  T_N-Bastet_NRM.tga  T_N-Bastet_SPC.tga
testProject/: main.cpp
